[package]
name = "excentra-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.32"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
rust_decimal = { version = "1.41.0", features = ["macros", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
